# log-it-cpp

./: .cbmignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  ConsoleLogger_8hpp.html  ConsoleLogger_8hpp.js  ConsoleLogger_8hpp_source.html  Doxyfile  Enums_8hpp.html  Enums_8hpp.js  Enums_8hpp_source.html  FileLogger_8hpp.html  FileLogger_8hpp.js  FileLogger_8hpp_source.html  ILogFormatter_8hpp.html  ILogFormatter_8hpp.js  ILogFormatter_8hpp_source.html  ILogger_8hpp.html  ILogger_8hpp.js  ILogger_8hpp_source.html  LogItConfig_8hpp.html  LogItConfig_8hpp.js  LogItConfig_8hpp_source.html  LogIt_8hpp.html  LogIt_8hpp.js  LogIt_8hpp_source.html  LogMacros_8hpp.html  LogMacros_8hpp.js  LogMacros_8hpp_source.html  LogRecord_8hpp.html  LogRecord_8hpp.js  LogRecord_8hpp_source.html  LogStream_8hpp.html  LogStream_8hpp.js  LogStream_8hpp_source.html  Logger_8hpp.html  Logger_8hpp.js  Logger_8hpp_source.html  (+290 more)
.claude/: CLAUDE.md  proxy-config.json  settings.local.json
.claude/agents/: architect.md  debugger.md  explore.md  tracer.md
.claude/commands/: article.md  video.md
.claude/rules/: delegation.md  image-analysis.md  nuanced-analysis.md  tool-priority.md  vault-contract.md
.codex/: config.toml
.github/workflows/: ci.yml  odr_check.yml  publish.yaml
agents/: README.md  build-and-test.md  codebase-orientation.md  commit-conventions.md  cpp-development-guidelines.md  header-implementation-guidelines-RU.md  header-implementation-guidelines.md
bench/: CMakeLists.txt  LatencyRecorder.hpp  Scenario.hpp  logit_bench.cpp  main.cpp
bench/adapters/: ILoggerAdapter.hpp  LogItAdapter.cpp  LogItAdapter.hpp  SpdlogAdapter.cpp  SpdlogAdapter.hpp
bench/results/: latency-2025-12-04-10k.csv  latency-2025-12-05-10k.csv
cmake/: log-it-cpp.pc.in  log-it-cppConfig.cmake.in
docs/: OtlpHttpLogger.md  PrometheusLogger.md  TaskExecutor.md  backpressure.md  groups.dox  mainpage.dox
examples/: CMakeLists.txt  example_logit_basic.cpp  example_logit_compression.cpp  example_logit_custom_backend.cpp  example_logit_customized.cpp  example_logit_mdbx_logger.cpp  example_logit_mdc_ndc.cpp  example_logit_memory_logger.cpp  example_logit_minimal_crash.cpp  example_logit_otlp_http.cpp  example_logit_prometheus_payload.cpp  example_logit_prometheus_server.cpp  example_logit_queue_limit.cpp  example_logit_short_macros.cpp  example_logit_system_logger.cpp
guides/: README.md  ci.md  concurrency.md  cpp_style.md  git-workflow.md  header-impl-RU.md  header-impl.md  logging-macros.md  orientation.md
include/log-it/: LogIt.hpp  LogItConfig.hpp
include/log-it/parts/: Enums.hpp  LogMacros.hpp  LogStream.hpp  Logger.hpp  TaskExecutor.hpp  Utils.hpp
include/log-it/parts/Formatter/: ILogFormatter.hpp  SimpleLogFormatter.hpp
include/log-it/parts/Logger/: ConsoleLogger.hpp  FileLogger.hpp  ILogger.hpp  UniqueFileLogger.hpp
include/log-it/parts/Test/: test_log_depth_1.hpp
include/log-it/parts/Utils/: LogRecord.hpp  VariableValue.hpp  argument_utils.hpp  encoding_utils.hpp  format.hpp  path_utils.hpp
include/logit_cpp/: LogIt.hpp  LogItConfig.hpp  logit.hpp
include/logit_cpp/logit/: ILogReader.hpp  LogMacros.hpp  LogStream.hpp  Logger.hpp  TaskExecutor.hpp  config.hpp  enums.hpp  formatter.hpp  log_macros.hpp  loggers.hpp  utils.hpp
include/logit_cpp/logit/detail/: CompressionUtils.hpp  CompressionWorker.hpp  LogContext.hpp  LogStream.hpp  MdbxByteIO.hpp  MdbxKeyUtils.hpp  MdbxProcessId.hpp  MpscRingAny.hpp  QueuePolicy.hpp  ScopeTimer.hpp  SingleThreadExecutor.hpp  SystemErrorMacros.hpp  TaskExecutor.hpp  system_error_macros.hpp
include/logit_cpp/logit/formatter/: ILogFormatter.hpp  SimpleLogFormatter.hpp
include/logit_cpp/logit/loggers/: ConsoleLogger.hpp  ConsoleStreamRoute.hpp  CrashLogger.hpp  CrashPosixLogger.hpp  (+16 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  (+81 more)
tests/: CMakeLists.txt  backend_shutdown_terminal_test.cpp  backpressure_ordering_spsc_test.cpp  backpressure_ordering_test.cpp  backpressure_policy_test.cpp  compiled_level_runtime_caveat_test.cpp  compiled_level_test.cpp  console_logger_dedicated_config_test.cpp  console_logger_stream_test.cpp  crash_logger_test.cpp  dedicated_executor_macro_api_test.cpp  dedicated_executor_shutdown_test.cpp  file_logger_current_read_live_test.cpp  file_logger_external_cmd_compression_test.cpp  file_logger_file_api_test.cpp  file_logger_gzip_compression_test.cpp  file_logger_remove_old_logs_suffixes_test.cpp  file_logger_rotation_naming_sequence_test.cpp  file_logger_rotation_naming_timestamp_ms_test.cpp  file_logger_rotation_naming_timestamp_retention_test.cpp  file_logger_rotation_naming_timestamp_test.cpp  file_logger_rotation_test.cpp  file_logger_set_queue_config_test.cpp  file_logger_test.cpp  file_logger_zstd_compression_test.cpp  fmt_macros_test.cpp  include_buffered_log_entry_nhr_test.cpp  include_formatter_nhr_test.cpp  include_log_file_info_nhr_test.cpp  include_log_file_read_result_nhr_test.cpp  include_loggers_nhr_test.cpp  include_memory_logger_nhr_test.cpp  include_only_ilogger_test.cpp  include_quickstart_test.cpp  include_utils_nhr_test.cpp  log_filters_tags_test.cpp  logger_clear_api_test.cpp  logger_shutdown_race_test.cpp  logger_snapshot_read_path_test.cpp  mdbx_logger_test.cpp  (+33 more)
tests/ems/: async_flush.cpp  console_smoke.cpp  single_thread_executor.cpp
tests/fixtures/test/loggers/file/file/file/: test_log_depth_3.hpp
tests/install_consumer/: CMakeLists.txt  main.cpp
tests/odr/: CMakeLists.txt  a.cpp  b.cpp  get_executor_a.cpp  get_executor_b.cpp  get_executor_main.cpp  get_logger_a.cpp  get_logger_b.cpp  get_logger_main.cpp
vcpkg-overlay/ports/log-it-cpp/: portfile.cmake  vcpkg.json
(+26 files in other folders)
